[gd_scene load_steps=4 format=3 uid="uid://cwi1778nnebjg"]

[ext_resource type="PackedScene" uid="uid://y3vtx0e0shv4" path="res://addons/maaacks_game_template/extras/scenes/overlaid_menus/level_won_menu.tscn" id="1_wqvle"]
[ext_resource type="Script" uid="uid://smf2wlnhcm7n" path="res://scenes/overlaid_menus/level_won_menu.gd" id="2_02k76"]
[ext_resource type="PackedScene" uid="uid://0gps4w53c5k1" path="res://scenes/overlaid_menus/level_won_summary_entry.tscn" id="3_02k76"]

[node name="LevelWonMenu" instance=ExtResource("1_wqvle")]
script = ExtResource("2_02k76")
summary_entry_scene = ExtResource("3_02k76")

[node name="MenuPanelContainer" parent="." index="1"]
custom_minimum_size = Vector2(410, 300)

[node name="PanelColor" parent="MenuPanelContainer" index="0"]
visible = false

[node name="Contents" type="VBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin" index="0"]
layout_mode = 2

[node name="Header" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "Day X complete!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents" index="1"]
layout_mode = 2

[node name="Scores" type="VBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents" index="2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores" index="0"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer" index="0"]
layout_mode = 2
text = "Documents archived:"

[node name="ScoreArchive" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores" index="1"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer2" index="0"]
layout_mode = 2
text = "Incorrect archivals:"

[node name="ScoreArchiveIncorrect" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 1"

[node name="HBoxContainer3" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores" index="2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer3" index="0"]
layout_mode = 2
text = "Documents redacted:"

[node name="ScoreRedactions" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer3" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 1"

[node name="HBoxContainer4" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores" index="3"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer4" index="0"]
layout_mode = 2
text = "Incorrect redactions:"

[node name="ScoreRedactionsIncorrect" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer4" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 1"

[node name="HBoxContainer5" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores" index="4"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer5" index="0"]
layout_mode = 2
text = "Personal finances:"

[node name="ScoreMoney" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/Contents/Scores/HBoxContainer5" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "1 / 1"

[node name="DescriptionLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin" index="1"]
visible = false
